--- a/style.css
+++ b/style.css
@@ -12,11 +12,18 @@ dialog {
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 6px;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-    z-index: 1;
+
     position: absolute;
+
     margin: 0 0 0 0;
-    top: 0px;
-    left: 0px;
-    width: 150px;
-    height: 300px;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+
+    display: block;
+    overflow: hidden;
+
+    opacity: 0;
+    transition: opacity 1s;
 }
