--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ dialog {
     position: absolute;
 
     margin: 0 0 0 0;
+    padding: 0 0 0 0;
     top: 25%;
     left: 25%;
     width: 50%;
@@ -32,4 +33,61 @@ dialog {
 
     opacity: 0;
     transition: opacity 1s;
+}
+
+div.dialog_container {
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+
+    text-align: center;
+}
+
+div.dialog_content_container {
+    top: 0;
+    left: 15%;
+    width: 70%;
+    height: 100%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    background-color: mediumblue;
+    display: inline-block;
+    position: absolute;
+}
+
+
+div.dialog_back_container {
+    top: 0;
+    left: 0;
+    width: 15%;
+    height: 100%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    display: inline-block;
+    position: absolute;
+    cursor: pointer;
+    background: url("graphics/arrow_left.png") no-repeat center;
+    opacity: 1;
+
+    text-align:center;
+
+}
+
+
+
+div.dialog_forward_container {
+    top: 0;
+    left: 85%;
+    width: 15%;
+    height: 100%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    display: inline-block;
+    position: absolute;
+    cursor: pointer;
+    background: url("graphics/arrow_right.png") no-repeat center;
 }
