--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-body {
-    margin: 0;
+
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 }
 
 canvas {
@@ -8,86 +12,128 @@ canvas {
     display: block;
 }
 
-dialog {
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 6px;
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+dialog.body_dialog {
 
-    position: absolute;
 
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
     top: 25%;
     left: 25%;
     width: 50%;
     height: 50%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 
-    display: block;
-    overflow: hidden;
+    border: none;
 
-    background-color: #849fd0;
+    background-color: yellow;
 
-    text-align: center;
     font-size: 150%;
     font-family: 'Ubuntu Condensed', sans-serif;
 
-    opacity: 0;
-    transition: opacity 1s;
+    overflow: hidden;
+scale(0)
+
+
 }
 
-div.dialog_container {
+@keyframes fade_in {
+    from {
+        transform: scale(0, 0)
+    }
+    10% {
+        transform: scale(0.01, 0)
+    }
+    50% {
+        transform: scale(0.01, 1);
+    }
+    to {
+        transform: scale(1, 1);
+    }
+}
 
+
+dialog.body_dialog_open {
+    animation: fade_in 2s;
+}
+
+
+
+
+dialog.body_dialog_closed {
+    animation-name: fade_out;
+    animation-duration: 1s;
+    transform: scale(0);
+}
+
+
+@keyframes fade_out {
+    from {
+        transform: scale(1, 1)
+    }
+    40% {
+        transform: scale(0.01, 1)
+    }
+    80% {
+        transform: scale(0.01, 0);
+    }
+    to {
+        transform: scale(0, 0);
+    }
+}
+
+
+
+
+
+div.dialog_content_left {
     top: 0;
     left: 0;
-    width: 100%;
+    width: 25%;
     height: 100%;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-
-    text-align: center;
+    float: left;
+    background-color: red;
 }
 
-div.dialog_content_container {
+div.dialog_content_middle {
     top: 0;
-    left: 15%;
-    width: 70%;
+    left: 25%;
+    width: 50%;
     height: 100%;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    background-color: mediumblue;
-    display: inline-block;
-    position: absolute;
+    float: left;
+    background-color: green;
 }
 
-
-div.dialog_back_container {
+div.dialog_content_right {
     top: 0;
-    left: 0;
-    width: 15%;
+    left: 75%;
+    width: 25%;
     height: 100%;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    display: inline-block;
-    position: absolute;
-    cursor: pointer;
-    background: url("graphics/arrow_left.png") no-repeat center;
-    opacity: 1;
-
-    text-align:center;
-
+    float: left;
+    background-color: blue;
 }
 
 
 
-div.dialog_forward_container {
-    top: 0;
-    left: 85%;
-    width: 15%;
-    height: 100%;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    display: inline-block;
-    position: absolute;
-    cursor: pointer;
-    background: url("graphics/arrow_right.png") no-repeat center;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
