--- a/style/style.css
+++ b/style/style.css
@@ -15,10 +15,10 @@ canvas {
 dialog.body_dialog {
 
 
-    top: 25%;
-    left: 25%;
-    width: 50%;
-    height: 50%;
+    top: 15%;
+    left: 15%;
+    width: 70%;
+    height: 70%;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 
@@ -105,6 +105,7 @@ div.dialog_content_middle {
     font-size: 150%;
     font-family: 'Ubuntu Condensed', sans-serif;
     text-align: center;
+    opacity: 0.9
 
 }
 
@@ -117,6 +118,10 @@ div.dialog_content_right {
     background-color: transparent;
 }
 
+
+img {
+    cursor: pointer;
+}
 
 
 
